Forcing an initial mark causes G1 to abort mixed collections

XMLWordPrintable

    • gc
    • b94

      If an initial mark is caused by humongous allocations, the gc locker or the metadata threshold being surpassed, the mixed gc phase is interrupted.

      This means that potentially no mixed gc will ever happen in many cases, running into full gcs all the time.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: