8140597: Forcing an initial mark causes G1 to abort mixed collections

Postpone the initial mark request until the current mixed GC phase has finished.

Reviewed-by: mgerdin